checkstyle: fixed configuration issues

--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -228,6 +228,9 @@
               <failsOnError>true</failsOnError>
               <consoleOutput>true</consoleOutput>
               <linkXRef>false</linkXRef>
+              <includeResources>false</includeResources>
+              <includeTestSourceDirectory>false</includeTestSourceDirectory>
+              <includeTestResources>false</includeTestResources>
             </configuration>
             <goals>
               <goal>check</goal>
