--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -45,7 +45,8 @@ grafana: {}
 
 #Following options are for developers only, but can also be useful in some cases ;)
 developer: {}
-  # logLevel: info
+  # logLevel: trace
+  # showStackTraces: true
   # enableJvmDebug: false # Only work with JVM version and allow connect 
   #                       # on port 8000 of operator Pod with jdb or similar
   # enableJvmDebugSuspend: false
