chore(deps): Update Quarkus to 1.2.0.Final, Kubernetes Client to 4.7.1 and GraalVM to 19.3.1-java8
This also updates the following dependencies:
surefire and filesafe plugins to 3.0.0-M4
enforcer-plugin to 3.0.0-M3
docker-maven-plugin to 0.33.0
spotbugs to 4.0.0-RC1
jandex to 1.0.7

And it removes the unused checker profile.

Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 # GraalVM Quarkus image
-image: docker.io/ongres/ubi-graalvm-maven:19.2.1
+image: docker.io/ongres/ubi-graalvm-maven:19.3.1-java8
 
 variables:
   # This will suppress any download for dependencies and plugins or upload messages which would clutter the console log.
@@ -9,8 +9,6 @@ variables:
                -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository
                -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
                -Dorg.slf4j.simpleLogger.showDateTime=true
-               -XX:+TieredCompilation
-               -XX:TieredStopAtLevel=1
                -Djava.awt.headless=true
                -XX:+UseParallelOldGC
   # As of Maven 3.3.0 instead of this you may define these options in `.mvn/maven.config` so the same config is used
