--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -3,6 +3,14 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 #
 
+# Quarkus Native Image
+quarkus.native.additional-build-args=\
+  -H:IncludeResources=.*/*.yaml,\
+  -H:IncludeResources=.*/*.sh,\
+  -H:IncludeResources=.*/*.properties,\
+  -H:IncludeResources=.*/banner.txt
+quarkus.native.native-image-xmx=8g
+
 # Logger Production
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=ALL
