--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -44,37 +44,35 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <!-- Dependencies versions -->
-    <quarkus.version>1.0.0.CR1</quarkus.version>
+    <quarkus.version>1.2.0.Final</quarkus.version>
+    <kubernetes-client.version>4.7.1</kubernetes-client.version>
     <jool.version>0.9.14</jool.version>
-    <kubernetes-client.version>4.6.3</kubernetes-client.version>
     <immutables.version>2.8.1</immutables.version>
     <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     <javax.validation-api.version>2.0.1.Final</javax.validation-api.version>
     <jsr305.version>3.0.2</jsr305.version>
     <checkstyle.version>8.27</checkstyle.version>
-    <spotbugs.version>4.0.0-beta3</spotbugs.version>
-    <checker.version>2.10.1</checker.version>
+    <spotbugs.version>4.0.0-RC1</spotbugs.version>
     <pmd.version>6.19.0</pmd.version>
     <errorprone.version>2.3.3</errorprone.version>
     <docker-junit-extension.version>1.2.10</docker-junit-extension.version>
     <jersey.version>2.29</jersey.version>
     <mockito.version>3.0.0</mockito.version>
     <log4j.version>2.11.2</log4j.version>
-    <jackson.dataformat.properties>2.9.10</jackson.dataformat.properties>
     <!-- Plugins versions -->
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <jar-plugin.version>3.2.0</jar-plugin.version>
     <clean-plugin.version>3.1.0</clean-plugin.version>
     <resources-plugin.version>3.1.0</resources-plugin.version>
-    <surefire-plugin.version>3.0.0-M3</surefire-plugin.version>
-    <failsafe-plugin.version>3.0.0-M3</failsafe-plugin.version>
+    <surefire-plugin.version>3.0.0-M4</surefire-plugin.version>
+    <failsafe-plugin.version>3.0.0-M4</failsafe-plugin.version>
     <checkstyle-plugin.version>3.1.0</checkstyle-plugin.version>
     <spotbugs-plugin.version>3.1.12.2</spotbugs-plugin.version>
     <pmd-plugin.version>3.12.0</pmd-plugin.version>
-    <enforcer-plugin.version>3.0.0-M2</enforcer-plugin.version>
+    <enforcer-plugin.version>3.0.0-M3</enforcer-plugin.version>
     <dependency-plugin.version>3.1.1</dependency-plugin.version>
-    <docker-maven-plugin.version>0.31.0</docker-maven-plugin.version>
-    <jandex-maven-plugin.version>1.0.6</jandex-maven-plugin.version>
+    <docker-maven-plugin.version>0.33.0</docker-maven-plugin.version>
+    <jandex-maven-plugin.version>1.0.7</jandex-maven-plugin.version>
     <!-- Checkstyle, SpotBugs and PMD properties -->
     <checkstyle.config.location>${project.basedir}/checks/checkstyle/checkstyle.xml</checkstyle.config.location>
     <checkstyle.suppressions.location>${project.basedir}/checks/checkstyle/suppressions.xml</checkstyle.suppressions.location>
@@ -93,7 +91,7 @@
       </dependency>
       <dependency>
         <groupId>io.quarkus</groupId>
-        <artifactId>quarkus-bom</artifactId>
+        <artifactId>quarkus-universe-bom</artifactId>
         <version>${quarkus.version}</version>
         <type>pom</type>
         <scope>import</scope>
@@ -138,9 +136,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-properties</artifactId>
-      <version>${jackson.dataformat.properties}</version>
     </dependency>
-
   </dependencies>
 
   <build>
@@ -359,68 +355,6 @@
                 </goals>
               </execution>
             </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>checker</id> <!-- Checker Framework profile -->
-      <dependencies>
-        <dependency>
-          <groupId>org.checkerframework</groupId>
-          <artifactId>checker</artifactId>
-          <version>${checker.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.checkerframework</groupId>
-          <artifactId>jdk8</artifactId>
-          <version>${checker.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>com.google.errorprone</groupId>
-          <artifactId>error_prone_annotations</artifactId>
-          <version>${errorprone.version}</version>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <artifactId>maven-dependency-plugin</artifactId>
-            <version>${dependency-plugin.version}</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>properties</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>${compiler-plugin.version}</version>
-            <configuration>
-              <fork>true</fork>
-              <compilerArguments>
-                <Xmaxerrs>10000</Xmaxerrs>
-                <Xmaxwarns>10000</Xmaxwarns>
-              </compilerArguments>
-              <annotationProcessors>
-                <annotationProcessor>org.immutables.processor.ProxyProcessor</annotationProcessor>
-                <annotationProcessor>org.checkerframework.checker.nullness.NullnessChecker</annotationProcessor>
-                <annotationProcessor>org.checkerframework.checker.interning.InterningChecker</annotationProcessor>
-                <annotationProcessor>org.checkerframework.checker.formatter.FormatterChecker</annotationProcessor>
-                <annotationProcessor>org.checkerframework.checker.optional.OptionalChecker</annotationProcessor>
-                <annotationProcessor>org.checkerframework.checker.propkey.PropertyKeyChecker</annotationProcessor>
-              </annotationProcessors>
-              <compilerArgs>
-                <arg>-Xbootclasspath/p:${org.checkerframework:jdk8:jar}</arg>
-                <arg>-AsuppressWarnings=uninitialized</arg>
-                <arg>-Xlint:all</arg>
-                <arg>-Xlint:-processing</arg> <!-- Ignore warning: No processor claimed any of these annotations -->
-                <arg>-Xlint:-path</arg> <!-- Ignore warning: bad path element -->
-              </compilerArgs>
-            </configuration>
           </plugin>
         </plugins>
       </build>
