feat: Pod status endpoint
We now have the endpoint /stackgres/cluster/pods/{namespace}/{name} to query the pods status of a cluster.
This endpoint also include a flag to know if grafana can be embedded in the IU or not

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
@@ -60,6 +60,10 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: status.podIP
+          {{- if and .Values.grafana.url .Values.grafana.token .Values.grafana.httpHost }}
+          - name: GRAFANA_EMBEDDED          
+            value: "true"
+          {{ end }}
         ports:
         - containerPort: 8080
           name: "http"
