--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -29,6 +29,7 @@ stackgres.containerBuild=${stackgres.containerBuild}
 stackgres.group=${stackgres.group}
 stackgres.crd.version=${stackgres.crd.version}
 stackgres.prometheus.allowAutobind=${stackgres.prometheus.allowAutobind}
+stackgres.prometheus.grafanaEmbedded=${stackgres.prometheus.grafanaEmbedded}
 
 stackgres.supported.major.versions=11,12
 stackgres.latest.minor.versions=6,1
