--- a/stackgres-k8s/src/operator-framework/pom.xml
+++ b/stackgres-k8s/src/operator-framework/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.stackgres</groupId>
     <artifactId>stackgres-parent</artifactId>
-    <version>0.8-SNAPSHOT</version>
+    <version>0.8-alpha1</version>
   </parent>
 
   <artifactId>stackgres-operator-framework</artifactId>
