--- a/stackgres-k8s/src/operator/pom.xml
+++ b/stackgres-k8s/src/operator/pom.xml
@@ -245,6 +245,8 @@
                           <run>wget -q -O /bin/kind  https://github.com/kubernetes-sigs/kind/releases/download/v0.6.0/kind-$(uname)-amd64</run>
                           <run>chmod a+x /bin/kind</run>
                           <run>wget -q https://get.helm.sh/helm-v2.16.1-linux-amd64.tar.gz -O -|tar xz --strip-components=1 -C /bin -f - linux-amd64/helm</run>
+                          <run>wget -q -O /bin/curl https://github.com/dtschan/curl-static/releases/download/v7.63.0/curl</run>
+                          <run>chmod a+x /bin/curl</run>
                         </runCmds>
                       </build>
                     </image>
