e2e: set disable anti affinity test's cluster chart defaults

--- a/stackgres-k8s/e2e/spec/disable-anti-affinity.values.yaml
+++ b/stackgres-k8s/e2e/spec/disable-anti-affinity.values.yaml
@@ -1,2 +1,16 @@
+config:
+  postgresql:
+    postgresql.conf:
+      shared_buffers: '32MB'
+  backup:
+    create: false
+    minio:
+      create: false
+cluster:
+  volumeSize: 128Mi
+  backupconfig: null
+sidecar:
+  prometheus:
+    allowAutobind: false
 nonProduction:
   disableClusterPodAntiAffinity: true
