--- a/stackgres-k8s/install/helm/stackgres-operator/templates/backup-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/backup-crd.yaml
@@ -24,7 +24,7 @@ spec:
         spec:
           type:
           properties:
-            clusterName:
+            cluster:
               type: string
               description: "The name of the cluster where the backup will or has been taken."
             isPermanent:
