--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -129,7 +129,7 @@ integration test:
   dependencies:
     - compile
   variables:
-    DEBUG: "true"
+    E2E_DEBUG: "true"
   script:
     - 'flock -w 3600 /tmp/stackgres-integration-test mvn $MAVEN_CLI_OPTS verify -P integration'
 
