ci: disable it test suite in order to only run e2e test suite

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ variables:
                    -DdeployAtEnd=true
   E2E_PARALLELISM: 32
   E2E_TIMEOUT: 600
+  DISABLE_IT: "true"
 
 # Cache downloaded dependencies and plugins between builds.
 # To keep cache across branches add 'key: "$CI_JOB_NAME"'
