--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/backupconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/backupconfig-cr.yaml
@@ -48,7 +48,7 @@ spec:
     type: s3
     s3:
       prefix: s3://stackgres
-      endpoint: http://{{ .Release.Name }}-minio.{{ .Release.Namespace }}.svc:9000
+      endpoint: http://{{ .Release.Name }}-minio:9000
       forcePathStyle: true
       region: k8s
       credentials:
