--- a/stackgres-k8s/install/helm/stackgres-operator/templates/mutator-webhook-configuration.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/mutator-webhook-configuration.yaml
@@ -124,5 +124,26 @@ webhooks:
         name: {{ .Release.Name }}
         path: '/stackgres/mutation/sgrestoreconfig'
       caBundle: {{ .Values.cert.crt }}
+---
+apiVersion: admissionregistration.k8s.io/v1beta1
+kind: MutatingWebhookConfiguration
+metadata:
+  name: {{ .Release.Name }}-sgbackup
+  namespace: {{ .Release.Namespace }}
+webhooks:
+  - name: sgbackup.{{ .Release.Name }}.{{ .Release.Namespace }}
+    sideEffects: None
+    rules:
+      - operations: ["CREATE"]
+        apiGroups: ["stackgres.io"]
+        apiVersions: ["*"]
+        resources: ["sgbackups"]
+    failurePolicy: Fail
+    clientConfig:
+      service:
+        namespace: {{ .Release.Namespace }}
+        name: {{ .Release.Name }}
+        path: '/stackgres/mutation/sgbackup'
+      caBundle: {{ .Values.cert.crt }}
 {{ end }}
 
