Fix typo in helm chart for cluster cr
Signed-off-by: Kadaffy Talavera <kadaffy@ongres.com>

--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -154,5 +154,5 @@ minio:
       purge: true
 
 #You should only set following options for non production environment
-nonProductionOptions:
+nonProduction:
   disableClusterPodAntiAffinity: true
