--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -7,6 +7,7 @@ config:
       random_page_cost: '1.5'
       password_encryption: 'scram-sha-256'
       wal_compression: 'on'
+      checkpoint_timeout: '30'
   pgbouncer:
     pgbouncer.ini:
       pool_mode: transaction
