fix: added prometheusAutobind to cluster CR

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
@@ -59,6 +59,9 @@ spec:
                 items:
                   type: string
                 description: "List of sidecars to include in the cluster"
+              prometheusAutobind:
+                type: boolean
+                description: "If enabled a ServiceMonitor will be created for each Prometheus instance found in order to collect metrics"
             required: [
               "instances",
               "pgVersion",
