Fix of issues #221, #222 and #224

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
@@ -62,11 +62,7 @@ spec:
             required: [
               "instances",
               "pgVersion",
-              "pgConfig",
-              "connectionPoolingConfig",
-              "resourceProfile",
-              "volumeSize",
-              "sidecars"
+              "volumeSize"
             ]
 
 
