--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/restoreconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/restoreconfig-cr.yaml
@@ -25,8 +25,8 @@ spec:
       key: "{{ .Values.config.restore.pgpConfiguration.key }}"
   {{- end }}
   source:
-    {{- if .Values.config.restore.from.backupUUID }}
-    fromBackup: "{{ .Values.config.restore.from.backupUUID }}"
+    {{- if .Values.config.restore.from.backupUID }}
+    fromBackup: "{{ .Values.config.restore.from.backupUID }}"
     {{- end }}
     autoCopySecrets: {{ .Values.config.restore.from.autoCopySecrets }}
     {{- if .Values.config.restore.from.storage.backupName }}
