fix: fixed backup and restore config in cluster CRD open API v3 schema

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
@@ -48,10 +48,10 @@ spec:
               storageClass:
                 type: string
                 description: "Storage class name to be used for the cluster"
-              backupconfig:
+              backupConfig:
                 type: string
                 description: "Backup config to apply"
-              restoreconfig:
+              restoreConfig:
                 type: string
                 description: "Restore config to apply"
               sidecars:
