fix: Removing the restore configuration from stackgres
It has been included in cluster configuration.

--- a/stackgres-k8s/e2e/spec/restore-stackgres.values.yaml
+++ b/stackgres-k8s/e2e/spec/restore-stackgres.values.yaml
@@ -11,7 +11,9 @@ config:
 cluster:
   volumeSize: 128Mi
   backupconfig: null
-  restoreconfig: restoreconf
+  restore:
+    autoCopySecrets: true
+    downloadDiskConcurrency: 1
 sidecar:
   prometheus:
     allowAutobind: false
