--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-crd.yaml
@@ -51,9 +51,19 @@ spec:
               backupConfig:
                 type: string
                 description: "Backup config to apply"
-              restoreConfig:
-                type: string
+              restore:
+                type: object
                 description: "Restore config to apply"
+                properties:
+                  fromBackup:
+                    type: string
+                    description: "UID of the Backup CR to restore"
+                  autoCopySecrets:
+                    type: boolean
+                    description: "Specify whether or not copy the required secrets to access the storage in which the backup is stored"
+                  downloadDiskConcurrency:
+                    type: integer
+                    description: "Indicate how many download streams to have during restoration"
               sidecars:
                 type: array
                 items:
