--- a/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/backup-default-values.properties
@@ -9,7 +9,7 @@ storage.s3.credentials.accessKey.key=accesskey
 storage.s3.credentials.accessKey.name=minio
 storage.s3.credentials.secretKey.key=secretkey
 storage.s3.credentials.secretKey.name=minio
-storage.s3.endpoint=http://minio.stackgres.svc:9000
+storage.s3.endpoint=http://minio:9000
 storage.s3.forcePathStyle=true
 storage.s3.prefix=s3://stackgres
 storage.s3.region=k8s
